Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: Juliana Mascarenhas
 description: This page is destiny to describe my projects, skills, and informations about my career. Check the content that I created in the Simplificando Redes site and Youtube channel.
